# wbsurfer2

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: parse_rows.m
tests/: conftest.py
tests/data/: MSC01.L.inflated.32k_fs_LR.surf.gii  MSC01.R.inflated.32k_fs_LR.surf.gii  dtseries.scene  mni_icbm152_t1_tal_nlin_asym_09a_3mm.nii  test.border  test.dtseries.nii  test_right.border  volume.scene
tests/wbsurfer/: test_border.py  test_cli.py  test_geodesic.py  test_logging.py  test_movie.py  test_scene.py  test_utils.py  test_volume.py
wbsurfer/: border.py  cli.py  geodesic.py  logging.py  movie.py  scene.py  utils.py  volume.py
