[project]
name = "wbsurfer2"
description = "CLI tool for making CIFTI-related movies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew77@gmail.com" }]
keywords = ["neuroimaging"]
classifiers = ["License :: OSI Approved :: MIT License"]
urls = { github = "https://github.com/vanandrew/wbsurfer2" }
dependencies = [
    "geodesic-chenhan >= 0.1.1",
    "networkx >= 3.4.1",
    "nibabel >= 5.3.0",
    "rich >= 13.9.3",
    "scipy >= 1.14.1",
    "trimesh >= 4.4.9",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black >= 24.10.0",
    "coverage[toml] >= 7.6.2",
    "isort >= 5.13.2",
    "pylint >= 3.3.1",
    "pytest >= 8.3.3",
    "pyupgrade >= 3.18.0",
]

[project.scripts]
wb_surfer2 = "wbsurfer.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "wbsurfer/_version.py"

[tool.setuptools.packages.find]
include = ["wbsurfer*"]

[tool.setuptools]
zip-safe = true

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"
source = ["wbsurfer"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = "all"
enable = ["line-too-long", "missing-class-docstring", "missing-function-docstring", "unused-import"]
score = false

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
