[project]
name = "wbsurfer2"
description = "CLI tool for making CIFTI-related movies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew77@gmail.com" }]
keywords = ["neuroimaging"]
classifiers = ["License :: OSI Approved :: MIT License"]
urls = { github = "https://github.com/vanandrew/wbsurfer2" }
dependencies = [
    "geodesic-chenhan >= 0.1.1",
    "networkx >= 3.4.1",
    "nibabel >= 5.3.0",
    "rich >= 13.9.3",
    "scipy >= 1.14.1",
    "trimesh >= 4.4.9",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "coverage[toml] >= 7.6.2",
    "pytest >= 8.3.3",
]

[project.scripts]
wb_surfer2 = "wbsurfer.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "wbsurfer/_version.py"

[tool.setuptools.packages.find]
include = ["wbsurfer*"]

[tool.setuptools]
zip-safe = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"
source = ["wbsurfer"]

[tool.coverage.report]
show_missing = true
precision = 2
